--- a/package.json
+++ b/package.json
@@ -24,13 +24,15 @@
     },
     "dependencies": {
         "dotenv": "^10.0.0",
-        "express": "^4.17.1"
+        "express": "^4.17.1",
+        "mongodb": "^4.5.0",
+        "raw-body": "^2.5.1"
     },
     "devDependencies": {
         "@types/express": "^4.17.13",
         "@types/node": "^16.4.7",
+        "prettier": "^2.3.2",
         "ts-node-dev": "^1.1.8",
-        "typescript": "^4.3.5",
-        "prettier": "^2.3.2"
+        "typescript": "^4.3.5"
     }
 }
